# Backend

aula1.2/: circle.py  rectangle.py
aula10/: Dockerfile  docker-compose.yaml  pyproject.toml
aula10/api/: main.py
aula11/: README.md  pyproject.toml
aula11/api/: run.py
aula12/: Dockerfile  db.json  docker-compose.yaml
aula12/api/: main.py
aula12/scripts/: fakedp.py
aula13/: Dockerfile  docker-compose.yaml  pyproject.toml
aula13/api/: main.py
aula3/: main.py  sleeper.py  test_main.py
aula3/circle/: circle.py
aula3/rectangle/: rectangle.py  test_rectangle.py
aula4/: pyproject.toml  shop_list.py  shopping_list.json
aula4/src/: Makefile  README.md  main.py  main2.py
aula5/: README.md  pyproject.toml
aula5/src/: shop_list.py
aula6/: Dockerfile  README.md  makefile  pyproject.toml
aula6/eticbot/: app.py
aula6/test/: docker-compose.yaml
aula7.8.9/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aula7.8.9/eticgpt/: bot.py  clients.py  models.py  run.py
basic_cli/: main.py
